crates/uitest/fixtures/ty_check/msg_duplicate_selector_const_expr.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/msg_duplicate_selector_const_expr.fe
---
error[9-0004]: duplicate selector in msg block
  ┌─ msg_duplicate_selector_const_expr.fe:8:5
  │
5 │     #[selector = sol("transfer(address,uint256)")]
  │     ---------------------------------------------- `Transfer` with selector 0xa9059cbb declared here
  ·
8 │     #[selector = sol("many_msg_babbage(bytes1)")]
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Approve` has selector 0xa9059cbb which conflicts with `Transfer`
  │
  = each variant in a msg block must have a unique selector

error[9-0004]: duplicate selector in msg block
   ┌─ msg_duplicate_selector_const_expr.fe:11:5
   │
 5 │     #[selector = sol("transfer(address,uint256)")]
   │     ---------------------------------------------- `Transfer` with selector 0xa9059cbb declared here
   ·
11 │     #[selector = 0xa9059cbb]
   │     ^^^^^^^^^^^^^^^^^^^^^^^^ `Foo` has selector 0xa9059cbb which conflicts with `Transfer`
   │
   = each variant in a msg block must have a unique selector
